Ajout de features

--- a/Site/index.html
+++ b/Site/index.html
@@ -11,10 +11,10 @@
         }
         h1 {
             color: black;
-            font-family: cursive, sans-serif; /* Choose a cursive or playful font */
-            font-size: 36px; /* Increase the font size for a more prominent look */
-            letter-spacing: 2px; /* Add letter spacing for a fluffy effect */
-            line-height: 1.5; /* Increase line height for spacing between lines */
+            font-family: cursive, sans-serif; /* cursive / playful font */
+            font-size: 36px; /* à changer pour avoir plus de profondeur*/
+            letter-spacing: 2px; /* espace entre les lettres */
+            line-height: 1.5; /* espace entre les lignes*/
         }
         p {
             color: black;
